--- a/src/pages/health.astro
+++ b/src/pages/health.astro
@@ -5,8 +5,8 @@ import Health from "../components/infopages/usecase/Health.astro";
 ---
 
 <head>
-  <title>AI Phone Agents Revolutionizing Patient Care</title>
-   <meta name="description" content="Transform your healthcare services through the implementation of AI-driven virtual agents that efficiently handle patient inquiries, coordinate appointment scheduling, and oversee follow-up communications" />
+  <title>AI Phone Agents for Health Care Industry - CallSupport  </title>
+   <meta name="description" content="AI Phone Agents for Healthcare. Improve patient experience, streamline appointments, and reduce wait times with AI-powered phone calls." />
 </head>
 
 <BaseLayout>
