--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,12 @@ import Pricing from "../components/landing/Pricing.astro";
 import Cta from "../components/global/Cta.astro";
 ---
 <head>
-  <title>Callsupport.ai </title>
-  <meta name="description" content="Discover Callsupport.ai, your ultimate solution for seamless communication and efficient customer support. Explore our features today!" />
+  <title>24/7 AI Receptionist - AI Answering Service & AI Outbound calls for Businesses  </title>
+  <meta name="description" content="Boost your business with AI-powered answering & outbound calls. Never miss a lead or opportunity again." />
   <meta name="keywords" content="customer support, communication, support software, Callsupport.ai" />
   <meta name="author" content="Callsupport.ai Team" />
   <meta property="og:title" content="Callsupport.ai" />
-  <meta property="og:description" content="Discover Callsupport.ai, your ultimate solution for seamless communication and efficient customer support." />
+  <meta property="og:description" content="Automate all your phone calls with AI" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://callsupport.ai" />
   <meta property="og:image" content="https://callsupport.ai/images/hero-banner.jpg" />
