--- a/src/pages/recruitment.astro
+++ b/src/pages/recruitment.astro
@@ -5,8 +5,8 @@ import Recrutiment from "../components/infopages/usecase/Recrutiment.astro";
 ---
 
 <head>
-  <title>AI Phone Agents to Optimize Recruitment Procedures</title>
-   <meta name="description" content="Revolutionize your hiring process with AI-driven virtual agents that efficiently manage candidate screening, interview arrangements, and follow-up communications" />
+  <title>AI Phone Agents for Recruitment Processes - CallSupport  </title>
+   <meta name="description" content="AI Phone Agents for Recruitment. Automate candidate screening, scheduling, and outreach with AI-powered phone calls." />
 </head>
 
 
