--- a/src/pages/restaurant.astro
+++ b/src/pages/restaurant.astro
@@ -5,8 +5,8 @@ import Restaurant from "../components/infopages/usecase/Restaurant.astro";
 ---
 
 <head>
-  <title>AI Phone Agents to Optimize Recruitment Procedures</title>
-   <meta name="description" content="Revolutionize your hiring process with AI-driven virtual agents that efficiently manage candidate screening, interview arrangements, and follow-up communications" />
+  <title>Get best AI Phone Agents for Restaurants - CallSupport  </title>
+   <meta name="description" content="Get the best AI Phone Agents for Restaurants. Automate your phone calls, improve customer service, and boost sales." />
 </head>
 
 
