--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -77,7 +77,7 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
               <img alt="logo" class="h-8" src="/Figma.svg" />
             </div>
             <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Canva.svg" />
+              <img alt="logo" class="h-8" src="/images/logos/Twilio.png" />
             </div>
             <div class="flex justify-center col-span-1">
               <img alt="logo" class="h-8" src="/Stripe.svg" />
@@ -86,10 +86,10 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
               <img alt="logo" class="h-8" src="/Gitlab.svg" />
             </div>
             <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Linear.svg" />
+              <img alt="logo" class="h-8" src="/images/logos/magical.svg" />
             </div>
             <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Gumroad.svg" />
+              <img alt="logo" class="h-8" src="/images/logos/AWRENCE2.svg" />
             </div>
           </div>
         </div>
