--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -27,22 +27,8 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/AIReceptionist.svg" alt="AI Receptionist" />
+
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -57,22 +43,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/Outbound Caller.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -87,22 +58,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/Automatic Appointment Booker.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -117,22 +73,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/Ecommerce.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -146,22 +87,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/Qualifying Leads.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -175,22 +101,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#6271fc"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                    <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                    <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                    <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-                  </svg>
+                <img src="/public/images/svgs/Claims, policy help, support.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
