icons and metadata updatd

--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -27,7 +27,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/AIReceptionist.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/AIReceptionist.svg" alt="AI Receptionist" />
 
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -43,7 +43,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/Outbound Caller.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/Outbound Caller.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -58,7 +58,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/Automatic Appointment Booker.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/Automatic Appointment Booker.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -73,7 +73,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/Ecommerce.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/Ecommerce.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -87,7 +87,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/Qualifying Leads.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/Qualifying Leads.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -101,7 +101,7 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                <img src="/public/images/svgs/Claims, policy help, support.svg" alt="AI Receptionist" />
+                <img src="/images/svgs/Claims, policy help, support.svg" alt="AI Receptionist" />
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
