--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -30,7 +30,7 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <img src="/public/images/svgs/Ecommerce.svg" alt="AI Receptionist" />
+            <img src="/images/svgs/Ecommerce.svg" alt="AI Receptionist" />
           
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
@@ -44,7 +44,7 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <img src="/public/images/svgs/healthcare.svg" alt="AI Receptionist" />
+            <img src="/images/svgs/healthcare.svg" alt="AI Receptionist" />
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Healthcare
@@ -57,7 +57,7 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <img src="/public/images/svgs/Real estate.svg" alt="AI Receptionist" />
+            <img src="/images/svgs/Real estate.svg" alt="AI Receptionist" />
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Real State
