--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -47,7 +47,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/setup.svg" alt="       Quick Setup" />
+            <img src="/images/svgs/setup.svg" alt="       Quick Setup" />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
             >
@@ -61,7 +61,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/Cost-Efficient.svg" alt="Cost-Efficient" />
+            <img src="/images/svgs/Cost-Efficient.svg" alt="Cost-Efficient" />
 
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -76,7 +76,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/24 Availability.svg" alt="24 Availability" />
+            <img src="/images/svgs/24 Availability.svg" alt="24 Availability" />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
             >
@@ -90,7 +90,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/Customizable.svg" alt="Customizable" />
+            <img src="/images/svgs/Customizable.svg" alt="Customizable" />
  
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -105,7 +105,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/Multilingual Support.svg" alt="Multilingual Support" />
+            <img src="/images/svgs/Multilingual Support.svg" alt="Multilingual Support" />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
             >
@@ -119,7 +119,7 @@ import Integration  from './components/Integration.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-            <img src="/public/images/svgs/User-Friendly Dashboard.svg" alt="User-Friendly Dashboard " />
+            <img src="/images/svgs/User-Friendly Dashboard.svg" alt="User-Friendly Dashboard " />
             </div><p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
             >
